syntax = "proto3";

package pb;

import "transaction.proto";

option go_package = "github.com/jakub/aioportal/server/pb";

message CreateTransactionRequest {
  int64 portfolio_id = 1;
  string symbol = 3;
  int32 type = 4;
  double price_per_coin = 5;
  double quantity = 6;
}

message CreateTransactionResponse {
  Transaction transaction = 1;
}